# portfolio-app

./: .gitignore  PROJECT_GUIDE.md  Portfolio-app.rar  SETUP.md  SHOWCASE_MVP_REFINED_SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.base.json  vercel.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  main.rs  models.rs
backend/src/routes/: auth.rs  mod.rs  projects.rs  theme.rs
docs/agent/: ai-context.md  progression.md
docs/architecture/: milestones.md  system-design.md
docs/backend/: api-reference.md
docs/frontend/: ui-guide.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: cursor.tsx  dot-grid.tsx  manga-background.tsx  navbar.tsx  otaku-overlay.tsx  otaku-project-card.tsx  project-card.tsx  protected-route.tsx  scroll-progress.tsx  text-reveal.tsx
frontend/src/hooks/: use-theme.tsx
frontend/src/lib/: openapi.yaml  tech-options.ts
frontend/src/pages/: admin-dashboard.tsx  admin-login.tsx  home.tsx
